--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -1,18 +1,33 @@
+# settings
 site_name: Witch Love - Wiki
 site_url: https://witch-love.github.io/
 repo_url: https://github.com/Witch-Love
-repo_name: Witch Love (Organization)
+repo_name: Witch Love (GitHub)
 copyright: All nipahs reserved
 site_dir: wiki
+
+# navigation
+nav:
+  - Website: 'https://witch-love.github.io/'
+  - Ana Sayfa: index.md
+
+# theme
 theme:
   name: material
   language: tr
+  favicon: img/favicon.ico
   palette:
     - scheme: slate
       toggle:
-        icon: material/brightness-4
+        icon: material/weather-sunny
         name: Aydınlık temaya geç
     - scheme: default
       toggle:
-        icon: material/brightness-7
+        icon: material/weather-night
         name: Karaklık temaya geç
+
+markdown_extensions:
+  - admonition
+  - pymdownx.mark
+  - pymdownx.details
+  - pymdownx.superfences
