--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -1,37 +1,48 @@
 # settings
 site_name: Witch Love Wiki
 site_url: https://witch-love.github.io/
-repo_url: https://github.com/Witch-Love
+repo_url: https://github.com/Witch-Love/witch-love.github.io
 repo_name: Witch Love (GitHub)
 copyright: '&copy; All nipahs reserved'
 site_dir: wiki
-extra_javascript:
-  - js/version.js
+edit_uri: edit/main/mkdocs/docs
 
 # navigation
 nav:
   - index.md
-  - <b>Umineko</b>:
+  - Umineko:
     - Kurulum:
       - umineko/installation.md
       - umineko/tr-installation.md
-  - <b>Higurashi</b>:
+  - Higurashi:
     - Kurulum:
       - higurashi/tr-installation.md
-  - Website: 'https://witch-love.github.io/'
   - Bağış: 'donation.md'
+  - "Site'ye dön": https://witch-love.github.io/
 
 # extra
 extra:
+  homepage: https://witch-love.github.io/
   social:
     - icon: fontawesome/brands/discord 
       link: https://discord.gg/jyD5jn9Vpd
     - icon: fontawesome/brands/youtube 
       link: https://www.youtube.com/@Singularityy
+extra_javascript:
+  - js/version.js
 
 # plugins
 plugins:
   - search
+  - git-revision-date-localized:
+      enabled: true
+      enable_creation_date: true
+      type: timeago
+  - git-committers:
+      enabled: true
+      repository: Witch-Love/witch-love.github.io
+      docs_path: mkdocs/docs
+      branch: main
 
 # theme
 theme:
@@ -41,8 +52,12 @@ theme:
   features:
     - navigation.path
     - navigation.footer
+    - navigation.sections
+    - navigation.top
     - content.tabs.link
     - content.code.copy
+#    - content.action.edit
+    - content.action.view
     - search.suggest
     - search.highlight
   palette:
