--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -41,11 +41,10 @@ plugins:
       enabled: true
       enable_creation_date: true
       type: timeago
-#  - git-authors
   - git-committers:
       enabled: true
       repository: Witch-Love/witch-love.github.io
-      docs_path: mkdocs/docs
+      docs_path: mkdocs/docs/
       branch: main
 
 # theme
