--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -78,12 +78,14 @@ theme:
     - search.suggest
     - search.highlight
   palette:
-    - scheme: slate
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
       accent: yellow
       toggle:
         icon: material/weather-sunny
         name: Aydınlık temaya geç
-    - scheme: default
+    - media: "(prefers-color-scheme: light)"
+      scheme: default
       accent: yellow
       toggle:
         icon: material/weather-night
@@ -119,3 +121,5 @@ markdown_extensions:
       permalink: true
       permalink_title: Bağlantıyı kopyala
       toc_depth: 5
+  - markdown_include.include:
+      base_path: snippets
