--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
 		{
 			"label": "MkDocs Serve",
 			"type": "shell",
-			"command": "mkdocs serve -f mkdocs/mkdocs.yml",
+			"command": "cd mkdocs;mkdocs serve --watch snippets",
 			"problemMatcher": [],
 			"group": {
 				"kind": "build",
