--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
         run: |
           cd mkdocs
           mkdocs build
-          cp -r wiki ../site/wiki
+          cp -r site ../site
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Build with Jekyll
