--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -1,17 +1,17 @@
 # settings
-site_name: Witch Love Wiki
+site_name: Witch Love
 site_description: Umineko başta olmak üzere, sevgi ve saygı duyduğumuz Türkçe olmayan eserleri büyük bir özenle Türkçe'ye çevirerek daha fazla insana ulaştırabilmeyi amaçlıyoruz.
-site_url: https://witch-love.com/wiki
+site_url: https://witch-love.com
 repo_url: https://github.com/Witch-Love
 repo_name: Witch Love (GitHub)
 copyright: >
   &copy; 2025 All nipahs reserved — <a href="#__consent">Çerez ayarları</a>
-site_dir: wiki
+site_dir: site
 edit_uri: witch-love.github.io/edit/main/mkdocs/docs
 
 # navigation
 nav:
-  - index.md
+  - home.md
   - Umineko:
     - umineko/index.md
     - Kurulum:
@@ -78,7 +78,7 @@ plugins:
   - git-committers:
       enabled: !ENV [CI, false]
       repository: Witch-Love/witch-love.github.io
-      docs_path: mkdocs/docs/
+      docs_path: docs/
       branch: main
 
 # theme
