--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -30,6 +30,7 @@ nav:
   - faq.md
   - donation.md
   - contact.md
+  - discord.md
   - Development:
     - Umineko Project:
       - umineko/creating-translations.md
